message login_req
{
	required int32 id = 1;
};